# gerrit-autosubmit

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  flake.nix  release.nu
nix/: checks.nix  flake-module.nix  module.nix
src/: gerrit.rs  main.rs
