[package]
description = "An autosubmit bot for Gerrit"
name        = "gerrit-autosubmit"
version     = "0.1.0"

categories = [ "development-tools" ]
edition    = "2024"
keywords   = [ "gerrit", "autosubmit", "merge", "queue" ]
license    = "MIT"
repository = "https://git.plumj.am/plumjam/gerrit-autosubmit"

[dependencies]
anyhow     = "1.0.102"
base64     = "0.22.1"
serde      = { features = [ "derive" ], version = "1.0.228" }
serde_json = "1.0.150"
ureq       = "3.3.0"
